@@ -3268,7 +3268,8 @@ class newsManager extends newsLibrary {
             'TXT_NEWS_IMAGE_ALT_DESCRIPTION'            => $_ARRAYLANG['TXT_NEWS_IMAGE_ALT_DESCRIPTION'],
             'TXT_NEWS_CATEGORY_NAME_DESCRIPTION'        => $_ARRAYLANG['TXT_NEWS_CATEGORY_NAME_DESCRIPTION'],
             'TXT_NEWS_IMAGE_ROW_DESCRIPTION'            => $_ARRAYLANG['TXT_NEWS_IMAGE_ROW_DESCRIPTION'],
-            'TXT_NEWS_TEASER_TEXT_DESCRIPTION'          => $_ARRAYLANG['TXT_NEWS_TEASER_TEXT_DESCRIPTION']
+            'TXT_NEWS_TEASER_TEXT_DESCRIPTION'          => $_ARRAYLANG['TXT_NEWS_TEASER_TEXT_DESCRIPTION'],
+            'TXT_HEADLINE_AUTHOR_DESCRIPTION'           => $_ARRAYLANG['TXT_HEADLINE_AUTHOR_DESCRIPTION'] 
         ));
     }
 
