@@ -260,6 +260,10 @@
       <td>{TXT_HEADLINE_TEXT_DESCRIPTION}</td>
     </tr>
     <tr class="row1">
+      <td>[[HEADLINE_AUTHOR]]</td>
+      <td>{TXT_HEADLINE_AUTHOR_DESCRIPTION}</td> 
+    </tr>
+    <tr class="row2">
       <td>[[HEADLINE_ID]]</td>
       <td>{TXT_HEADLINE_ID_DESCRIPTION}</td>
     </tr>
